# rsnap

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  installer.nsi  rsnap.exe.manifest
assets/icons/: LICENSE
src/: annotate.rs  capture.rs  config.rs  icons.rs  logging.rs  main.rs  monitors.rs  output.rs  overlay.rs  recording.rs  recording_border.rs  win32.rs
